--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 
             </div>
             <div class="controls">
-                <button onclick="startGame()" id="startButton">Start Spel</button>
-                <button onclick="guess()" id="guess">Gok</button>
+                <button id="startButton">Start Spel</button>
+                <button id="guess">Gok</button>
             </div>
         </div>
     </div>
